# mincaml

./: .gitignore  Cargo.toml  README.md  rts.c  rustfmt.toml  test.sh
.github/workflows/: ci.yml
programs/: cls-bug2.ml  cls-reg-bug.ml  float.ml  join-reg.ml  join-stack.ml  join-stack2.ml
programs/bench/: harmonic.ml  mandelbrot.ml
programs/simple/: simple1.ml  simple10.ml  simple11.ml  simple12.ml  simple13.ml  simple14.ml  simple4.ml  simple5.ml  simple7.ml  simple8.ml  simple9.ml
src/: anormal.rs  ast.rs  cg_types.rs  closure_convert.rs  codegen.rs  codegen_cranelift.rs  codegen_llvm.rs  common.rs  ctx.rs  instr_sel.rs  interner.rs  knormal.rs  lexer.rs  lib.rs  liveness.rs  locals.rs  main.rs  parser.lalrpop  parser.rs  parser.rs.bak  parser_lalrpop.lalrpop  parser_lalrpop.rs  perf.rs  type_arena.rs  type_check.rs  type_check_env.rs  utils.rs  var.rs  wasm_builder.rs  wasm_codegen.rs  wasm_linker.rs
src/closure_convert/: print.rs
src/codegen/: mod.rs  native.rs
src/codegen/wasm/: alloc.rs  codegen.rs  encoding.rs  fun_builder.rs  instr.rs  mod.rs  types.rs
src/codegen2/: instr.rs  liveness.rs  mod.rs  types.rs  utils.rs
src/entity/: README.md  boxed_slice.rs  iter.rs  keys.rs  list.rs  map.rs  mod.rs  primary.rs  set.rs  sparse.rs
src/lower/: block.rs  cfg.rs  ctx.rs  fun.rs  instr.rs  liveness.rs  mod.rs  print.rs  reg_alloc.rs  types.rs
src/lower/reg_alloc/: linear_interval_split.rs  mod.rs
src/wasm_builder/: mod.rs
test/: cls-bug.ml  cls-rec.ml  join-reg2.ml  join-stack3.ml  main.rs  spill2.ml  spill3.ml
test/simple/: simple2.ml  simple3.ml  simple6.ml  simple7.ml  simple8.ml
