[package]
name = "mincaml"
version = "0.1.0"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
edition = "2018"

[lib]
name = "libmc"
path = "src/lib.rs"

[[bin]]
name = "mc"
path = "bin/main.rs"

[[bin]]
name = "test"
path = "bin/test.rs"

[dependencies]
cranelift-codegen = "0.66"
cranelift-entity = "0.66"
cranelift-frontend = "0.66"
cranelift-module = "0.66"
cranelift-native = "0.66"
cranelift-object = "0.66"
fxhash = "0.2.1"

[profile.release]
lto = true
