[package]
name = "mincaml"
version = "0.1.0"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
edition = "2024"

[lib]
name = "libmc"
path = "src/lib.rs"

[[bin]]
name = "mc"
path = "bin/main.rs"

[[bin]]
name = "test"
path = "bin/test.rs"

[dependencies]
cranelift-codegen = "0.72"
cranelift-entity = "0.72"
cranelift-frontend = "0.72"
cranelift-module = "0.72"
cranelift-native = "0.72"
cranelift-object = "0.72"
fxhash = "0.2.1"
lexgen = "0.16.0"
lexgen_util = "0.16.0"
lalrpop-util = "0.22"

[profile.release]
lto = true
