[package]
name = "mincaml"
version = "0.1.0"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
edition = "2024"

[lib]
name = "libmc"
path = "src/lib.rs"

[[bin]]
name = "mc"
path = "bin/main.rs"

[[bin]]
name = "test"
path = "bin/test.rs"

[dependencies]
clap = { version = "4.5.60", default-features = false, features = ["std", "help", "usage", "error-context"] }
cranelift-codegen = "0.122"
cranelift-entity = "0.122"
cranelift-frontend = "0.122"
cranelift-module = "0.122"
cranelift-native = "0.122"
cranelift-object = "0.122"
elegance = "0.4.0"
fxhash = "0.2.1"
inkwell = { version = "0.8.0", features = ["llvm20-1"] }
lalrpop-util = "0.22"
lexgen = "0.16.0"
lexgen_util = "0.16.0"

[profile.release]
lto = true
